--- a/src/app/modules/popup/components/popup/popup.component.scss
+++ b/src/app/modules/popup/components/popup/popup.component.scss
@@ -8,25 +8,33 @@ body {
   min-height: $popup-height;
 }
 
-html {
-  scrollbar-gutter: stable;
-
-  &.cdk-global-scrollblock {
-    position: relative;
-  }
+html.cdk-global-scrollblock {
+  position: relative;
 }
 
 app-popup {
   display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  overflow-y: auto;
+  scrollbar-gutter: stable;
 
   .content {
     padding: $padding $padding 4rem;
   }
 
   .menu {
+    display: flex;
+    justify-content: flex-end;
     position: fixed;
-    right: $scrollbar-width + $padding;
     bottom: 0;
     z-index: 1;
+    left: 0;
+    right: 0;
+    margin-right: 1rem;
   }
 }
